changes to project theme and theme 06

--- a/sites/all/themes/scholar_base/scholar-base.css
+++ b/sites/all/themes/scholar_base/scholar-base.css
@@ -165,6 +165,7 @@ body.cp-toolbar-mini #top {
   line-height: normal;
   background: transparent;
   }
+
 body.cp-toolbar-mini #top ul.links {
   background: url(images/toolbar-mini-tab.png) no-repeat 0 0;
   height: 22px;
@@ -174,7 +175,9 @@ body.cp-toolbar-mini #top ul.links li {
   margin:0;
   background: url(images/toolbar-mini-tab.png) no-repeat 0 0 transparent;
   height: 22px;
-  padding: 2px 6px 4px;
+  line-height: 22px;
+  padding: 0 6px 4px;
+  float:left;
   }
 
 body.cp-toolbar-mini #top ul.links li.first {
