--- a/sites/all/themes/scholar_theme_06/scholar-theme-06.css
+++ b/sites/all/themes/scholar_theme_06/scholar-theme-06.css
@@ -24,7 +24,7 @@ a:hover {
 
 
 h1, h2, h3, #sidebar-right a, #header {
-    font-family: georgia, serif;
+    font-family: baskerville, georgia, serif;
     font-weight: normal;
     color:#484b63;
     }
@@ -107,6 +107,7 @@ body.no-sidebars #content-wrapper {
     padding-bottom: 2em;
     }
 
+/* removed custom logo for Ken Shepsle
 #header h1 {
     background:transparent url(images/logo.gif) no-repeat scroll left top;
     height:30px;
@@ -120,6 +121,16 @@ body.no-sidebars #content-wrapper {
     height:30px;
     width:467px;
     }
+*/
+
+
+#header h1 {
+  margin: 16px auto 0;
+  text-transform: uppercase;
+  font-size: 40px;
+  text-shadow: #222 0 0 .4em;
+  }
+
 
 #header h2, #header p {
     display:none;
@@ -127,6 +138,7 @@ body.no-sidebars #content-wrapper {
 
 #header a, #header a:visited {
     text-decoration: none;
+    color: #F7F3EA;
     }
 
 #header a:hover {
