change to front top triangle

--- a/sites/all/themes/scholar_project/scholar-project.css
+++ b/sites/all/themes/scholar_project/scholar-project.css
@@ -136,6 +136,7 @@ li#get-form a {
   width: 147px;
   height: 90px;
   background: url(images/triangle-video-tutorial.png) no-repeat transparent;
+  background: url(images/version-2.png) no-repeat transparent;
   position: absolute;
   top: 1px;
   right: 1px;
