adding true custom themes for rbates and kshepsle

--- a/sites/all/themes/scholar_theme_06/scholar-theme-06.css
+++ b/sites/all/themes/scholar_theme_06/scholar-theme-06.css
@@ -155,6 +155,10 @@ body.no-sidebars #content-wrapper {
     margin: 15px 0;
     }
 
+#navbar ul.menu {
+  text-align:center;
+  }
+
 #navbar li {
     margin: 0 1em;
     text-transform: uppercase;
