fixed screenshots of theme06

--- a/sites/all/themes/scholar_base/scholar-base.css
+++ b/sites/all/themes/scholar_base/scholar-base.css
@@ -59,7 +59,7 @@ p, div.messages, #content-main .views-row {
 
 
 #header h1, #header h2, #header p {
-  margin: 0;
+  margin: 0 0 .1em 0;
   }
 
 p.copy {
