--- a/sites/all/themes/cp_theme/cp-theme.css
+++ b/sites/all/themes/cp_theme/cp-theme.css
@@ -103,20 +103,13 @@ body.no-sidebars #cp-content, body.sidebar-right #cp-content {
   bottom: 0;
   }
 
-#cp-content .innerframe form {
+#cp-content .innerframe form, .view-display-id-default {
   margin: 30px;
   }
 
-/*
-
-.page-cp-settings #cp-content .innerframe form,
-.page-cp-settings-menus #cp-content .innerframe form,
-.page-cp-settings-logo #cp-content .innerframe form,
-.page-cp-settings-front #cp-content .innerframe form {
-  width: 721px;
+#cp-content .innerframe .view-display-id-default form {
+  margin: 0 0 1.5em 0;
   }
-
-*/
 
 .page-cp-settings #cp-content .innerframe form .resizable-textarea  {
   width: 99%;
@@ -253,12 +246,8 @@ p {
 
 /* SPECIFIC PAGE VIEWS */
 
+
 /* Activity Area */
-
-
-.view-vsite-activity {
-  margin: 30px 0 0 30px;
-  }
 
 .view-vsite-activity .views-field-message, .view-vsite-activity .views-field-title {
   font-weight: bold;
