changed help icon

--- a/sites/all/themes/scholar_base/scholar-base.css
+++ b/sites/all/themes/scholar_base/scholar-base.css
@@ -415,7 +415,14 @@ input.form-submit, button {
   white-space: nowrap;
   }
 
+.advanced-help-link {
+ background: url(images/help.png) no-repeat;
+ width: 15px;
+ height: 15px;
+ }
 
+.advanced-help-link:hover {
+  background-position: 0 -15px;
 
 
 /* MESSAGES */
