minor changes to line-spacing in descriptions etc

--- a/sites/all/modules/vsite/vsite_layout/theme/vsite_layout.css
+++ b/sites/all/modules/vsite/vsite_layout/theme/vsite_layout.css
@@ -69,11 +69,12 @@ li.scholarlayout-item {
 #scholarlayout-top-widgets li.scholarlayout-item {
   float: left;
   width: 118px;
-  height: 39px;
+  height: 23px;
   text-align: center;
   color:#444545;
   padding-top: 91px;
   background:url(images/widget-bg.png) no-repeat transparent 50% 10px;
+  line-height: 86%;
   }
 
 #scholarlayout-container li.scholarlayout-item {
@@ -146,9 +147,7 @@ li.scholarlayout-item {
   }
 
 #scholarforms_save_warning {
-  position:absolute;
-  left: 286px;
-  top: 161px;
+  clear: both;
   }
 
 #edit-settings-layout-page-type-wrapper  {
@@ -163,19 +162,22 @@ li.scholarlayout-item {
 
 #edit-settings-layout-page-type-wrapper .description {
   clear: left;
-  position: absolute;
-  top: 21px;
+  width: 665px;
   }
 
 #cp-content .innerframe #cp-settings-form {
   margin-top: 10px;
   }
 
-#cp-settings-form .form-actions {
+#cp-settings-form .form-submit {
   position:absolute;
-  top: 870px;
-  left: 459px;
+  top: 854px;
+  left: 55px;
   z-index: 10;
+  }
+
+#cp-settings-form #edit-reset {
+  left: 164px;
   }
 
 .ahah-progress-throbber {
