--- a/sites/all/themes/cp_theme/forms.css
+++ b/sites/all/themes/cp_theme/forms.css
@@ -73,6 +73,12 @@ select option {
   margin-bottom: 3px;
   }
 
+table.features div.feature div.description {
+  font-size:11px;
+  line-height:18px;
+  margin:0;
+  }
+
 .section-cp fieldset legend, h3#modal-title {
 	font-weight: bold;
 	color:#425e69;
