--- a/sites/all/themes/scholar_theme_06/scholar-theme-06.css
+++ b/sites/all/themes/scholar_theme_06/scholar-theme-06.css
@@ -112,7 +112,7 @@ body.no-sidebars #content-wrapper {
 #header {
     background: #44514F url(images/top.gif) no-repeat scroll center bottom;
     color: #F7F3EA;
-    padding-bottom: 2em;
+    padding-bottom: 28px;
     }
 
 
