--- a/sites/all/themes/scholar_base/scholar-base.css
+++ b/sites/all/themes/scholar_base/scholar-base.css
@@ -419,41 +419,47 @@ input.form-submit, button {
  background: url(images/help.png) no-repeat;
  width: 15px;
  height: 15px;
+ margin-right: 4px;
  }
 
 .advanced-help-link:hover {
   background-position: 0 -15px;
+  }
 
 
 /* MESSAGES */
 
 div.messages {
-  background:#BBDDFF none repeat scroll 0 0;
+  background:#BBDDFF;
   border:1px solid #AACCEE;
   color:#003366;
   margin:0 0 10px;
   padding:9px;
   }
 
+div.status {
+  background:#CCFF88;
+  border:1px solid #BBEE77;
+  color:#336600;
+  margin:0 0 10px;
+  padding:9px;
+  }
+
 div.warning {
-  background:#FFEE66 none repeat scroll 0 0;
-  border-color:#EEDD55;
+  background: #FFEE66;
+  border:1px solid #EEDD55;
   color:#884400;
+  margin:0 0 10px;
+  padding:9px;
   }
 
 div.error {
-  background:#EE6633 none repeat scroll 0 0;
-  border-color:#DD5522;
+  background:#EE6633;
+  border:1px solid #DD5522;
   color:#FFFFFF;
+  margin:0 0 10px;
+  padding:9px;
   }
-
-div.status {
-  background:#CCFF88 none repeat scroll 0 0;
-  border-color:#BBEE77;
-  color:#336600;
-  }
-
-
 
 
 /* SYSTEM THINGS */
