added better spacing to help icon

--- a/sites/all/themes/cp_theme/cp-theme.css
+++ b/sites/all/themes/cp_theme/cp-theme.css
@@ -117,6 +117,7 @@ body.no-sidebars #cp-content, body.sidebar-right #cp-content {
 
 .help {
   margin-left: 5px;
+  margin-top: 5px;
   }
 
 .views-admin-links {
