added links to footer

--- a/sites/all/themes/scholar_base/scholar-base.css
+++ b/sites/all/themes/scholar_base/scholar-base.css
@@ -81,6 +81,17 @@ a, a:visited {
 	color: #005C9C;
 	}
 
+p.copy a, p.copy a:visited {
+  font-style: normal;
+  text-decoration: none;
+  border-bottom: 1px solid #c0c0c0;
+  color: #76797C;
+  }
+
+p.copy a:hover {
+  border-color:#000;
+  color: #000;
+  }
 
 .marker, .form-required, ul.admin li a, ul.admin li a:visited, a.context-button {
   color: #cc0000 !important;
