padding problem with theme 05

--- a/sites/all/themes/scholar_theme_05/scholar-theme-05.css
+++ b/sites/all/themes/scholar_theme_05/scholar-theme-05.css
@@ -80,7 +80,7 @@ h2.title {
 /* LAYOUT */
 
 .column {
-  padding: 10px 35px !important;
+  padding: 10px 35px;
   }
 
 #sidebar-left, #header-left {
@@ -111,6 +111,12 @@ body.header-main #sidebar-left, body.header-main-right #sidebar-left {
 body.sidebar-left #content-wrapper {
   padding-right: 70px;
   }
+
+body.no-sidebars #content-wrapper {
+  padding-right: 35px;
+  padding-left: 35px;
+  }
+
 
 body.navbar #content-main {
   margin-top: 30px;
