fixed publication settings

--- a/sites/all/themes/scholar_base/modal.css
+++ b/sites/all/themes/scholar_base/modal.css
@@ -79,10 +79,6 @@ div.ctools-modal-content .modal-content .modal-throbber-wrapper img {
 }
 
 /** modal forms CSS **/
-div.ctools-modal-content .form-item label {
-  width: 15em;
-  float: left;
-}
 
 div.ctools-modal-content .form-item label.option {
   width: auto;
@@ -108,6 +104,12 @@ div.ctools-modal-content .modal-form .no-float label  {
 div.ctools-modal-content fieldset,
 div.ctools-modal-content .form-radios,
 div.ctools-modal-content .form-checkboxes {
+
+}
+
+div.ctools-modal-content fieldset {
+  padding-bottom: 10px;
+  border-bottom: 1px solid #ccc;
   clear: left;
 }
 
