--- a/sites/all/themes/cp_theme/forms.css
+++ b/sites/all/themes/cp_theme/forms.css
@@ -94,6 +94,10 @@ table.features div.feature div.description {
   margin:0;
   }
 
+#modal-content table {
+  width:auto;
+  }
+
 
 
 h3#modal-title {
