--- a/sites/all/themes/cp_theme/forms.css
+++ b/sites/all/themes/cp_theme/forms.css
@@ -4,6 +4,10 @@ fieldset {
   clear: both;
   }
 
+.vertical-tabs fieldset {
+  clear:none;
+  }
+
 .section-cp fieldset legend, h3#modal-title {
 	font-weight: bold;
 	color:#425e69;
