initial theming of searchbox

--- a/sites/all/themes/scholar_base/forms.css
+++ b/sites/all/themes/scholar_base/forms.css
@@ -52,3 +52,42 @@ select option {
 .views-exposed-form .views-exposed-widget {
   padding: 0 2em 0 0;
   }
+
+
+/* Search box */
+
+#vsite-widgets-search-form {
+  background: url(images/searchglass.gif) no-repeat 100% 0;
+  height: 18px;
+  }
+
+#vsite-widgets-search-form div.form-item {
+  padding: 0;
+  border: none;
+  }
+
+#vsite-widgets-search-form #edit-search {
+  float: left;
+  width: 150px;
+  height: 14px;
+  padding: 2px 4px;
+  border: none;
+  border-left: 1px solid #b7c2ce;
+  width:144px;
+  background: transparent;
+  }
+
+#header-right #vsite-widgets-search-form #edit-search {
+  width: 43px;
+  }
+
+#vsite-widgets-search-form input#edit-submit {
+  float:right;
+  background: transparent;
+  font-size: 10px;
+  width: 18px;
+  height: 18px;
+  border: none;
+  padding: 0 !important;
+  text-indent: -999em;
+  }
