initial theming of searchbox

--- a/sites/all/themes/scholar_base/forms.css
+++ b/sites/all/themes/scholar_base/forms.css
@@ -56,25 +56,30 @@ select option {
 
 /* Search box */
 
+
+#block-vsite_widgets-3 {
+  padding-bottom: 5px;
+  }
+
 #vsite-widgets-search-form {
   background: url(images/searchglass.gif) no-repeat 100% 0;
   height: 18px;
+  line-height:normal;
   }
 
 #vsite-widgets-search-form div.form-item {
   padding: 0;
   border: none;
+  margin-right: 18px;
   }
 
 #vsite-widgets-search-form #edit-search {
-  float: left;
-  width: 150px;
   height: 14px;
-  padding: 2px 4px;
+  padding: 2px 4px 0 0;
   border: none;
   border-left: 1px solid #b7c2ce;
-  width:144px;
   background: transparent;
+  width:98%;
   }
 
 #header-right #vsite-widgets-search-form #edit-search {
