--- a/sites/all/themes/scholar_base/forms.css
+++ b/sites/all/themes/scholar_base/forms.css
@@ -65,6 +65,7 @@ select option {
   background: url(images/searchglass.gif) no-repeat 100% 0;
   height: 18px;
   line-height:normal;
+  max-width: 300px;
   }
 
 #vsite-widgets-search-form div.form-item {
