--- a/sites/all/themes/cp_theme/cp-theme.css
+++ b/sites/all/themes/cp_theme/cp-theme.css
@@ -279,3 +279,22 @@ p {
 .section-cp fieldset.vsite_content_filter_box .fieldset-wrapper{
 	margin-bottom:5px;
 }
+
+
+.view-vsite-news-follow-candidate td {
+  padding: 10px 4px;
+  border: 2px solid #ececec;
+  }
+
+.view-vsite-news-follow-candidate .views-field-field-vsite-logo-fid img {
+  float: left;
+  margin-right: 4px;
+  }
+
+.view-vsite-news-follow-candidate .flag {
+  text-decoration: underline;
+  }
+
+.view-vsite-news-follow-candidate .unflag-action {
+  color: #000;
+  }
