forms, IE rules on page.tpl.php

--- a/sites/all/themes/cp_theme/forms.css
+++ b/sites/all/themes/cp_theme/forms.css
@@ -15,7 +15,7 @@ fieldset {
 	float: left;
 	}
 
-.section-cp .fieldset-wrapper, .section-cp div.spaces-block-customizer, .section-cp div.description  {
+.section-cp .fieldset-wrapper, .section-cp div.description  {
 	padding: 4px;
 	margin-bottom: 3em;
 	margin-left: 190px;
@@ -23,7 +23,7 @@ fieldset {
 
 /*FireFox 3*/
 @-moz-document url-prefix() {
-  .section-cp .fieldset-wrapper, .section-cp div.spaces-block-customizer, .section-cp div.description {
+  .section-cp .fieldset-wrapper, .section-cp div.description {
   margin-top:-28px;
     }
   }
@@ -178,7 +178,7 @@ fieldset.group-account-basics {
 
 .modal_col {
   float: left;
-  width: 45%;
+  width: 40%;
   margin-right: 46px;
   }
 
