--- a/sites/all/modules/vsite/vsite_layout/theme/vsite_layout.css
+++ b/sites/all/modules/vsite/vsite_layout/theme/vsite_layout.css
@@ -136,6 +136,11 @@ li.scholarlayout-item {
 #scholarlayout-top-widgets .close-this {
   display:none;
   }
+  
+#scholarlayout-top-widgets li.disabled,
+#scholarlayout-container li.disabled {
+  display:none;
+}
 
 .poof {
 	background: transparent url(images/poof.png) no-repeat 0 0;
