new site message theming

--- a/sites/all/themes/scholar_base/scholar-base.css
+++ b/sites/all/themes/scholar_base/scholar-base.css
@@ -122,7 +122,7 @@ ul.menu li {
   margin: 0;
   }
 
-li.leaf, li.collapsed {
+li.leaf, li.collapsed, ul.menu li.leaf, ul.menu li.collapsed {
   padding: 0;
   list-style: none;
   }
@@ -489,6 +489,44 @@ div.error {
   padding:9px;
   }
 
+/* Welcome message */
+
+#message_welcome_message {
+  background:#eef1c7;
+  border:1px solid #d1d5a6;
+  color:#44471d;
+  margin:0 0 10px;
+  padding:9px 20px;
+  }
+
+#message_welcome_message h3, #message_welcome_message p {
+  margin-bottom: 1em;
+  }
+
+#resource-list li {
+  padding-left: 20px;
+  list-style: disc inside;
+  }
+
+#hide-box-options {
+  margin-bottom: 0;
+  }
+
+#message_welcome_message .scholar-admin {
+  margin-top: 1em;
+  text-align:right;
+  }
+
+#message_welcome_message .scholar-admin .toggle span,#message_welcome_message .scholar-admin .slider {
+  background: #D1D5A6;
+  border-color: #9ea17b;
+  }
+
+#message_welcome_message .scholar-admin .slider ul.links li.first {
+  padding-right: 5px;
+  border-right: 1px solid #222;
+  margin-right: 5px;
+  }
 
 /* SYSTEM THINGS */
 
