--- a/sites/all/themes/scholar_base/ie.css
+++ b/sites/all/themes/scholar_base/ie.css
@@ -24,9 +24,25 @@
   display: inline;
   }
 
-
-#sidebar-left, #header-left {
-  left: 0;
-	_left: 220px;
+#sidebar-left {
+	left: 220px;
 	}
+
+#header-left {
+  left: -210px;
+  }
+
+ul.menu li.leaf {
+  list-style-image: none;
+  }
+
+#vsite-widgets-search-form input#edit-search {
+  width: 90%;
+  }
+
+#vsite-widgets-search-form input#edit-submit {
+  font-size: 0px;
+  display:block;
+  line-height: 0px;
+  }
 
