--- a/sites/all/themes/scholar_base/scholar-base.css
+++ b/sites/all/themes/scholar_base/scholar-base.css
@@ -127,8 +127,6 @@ li.leaf, li.collapsed, ul.menu li.leaf, ul.menu li.collapsed {
   list-style: none;
   }
 
-
-
 .links li {
   font-size: .9em;
   }
@@ -261,6 +259,11 @@ body.no-sidebars #content-main, body.header-main #header-main {
   float: left;
   position: relative;
   padding: 10px;
+  }
+
+#header .column {
+  padding-top: 0;
+  padding-bottom: 0;
   }
 
 #header-left, #header-right, #sidebar-left, #sidebar-right {
