--- a/sites/all/themes/scholar_theme_05/scholar-theme-05.css
+++ b/sites/all/themes/scholar_theme_05/scholar-theme-05.css
@@ -127,7 +127,7 @@ body.navbar #content-main {
 /* HEADER ELEMENTS */
 
 #header-wrapper {
-  padding-right: 378px !important;
+  padding-right: 395px !important;
   }
 
 #header {
@@ -139,7 +139,8 @@ body.navbar #content-main {
 #header-main {
     background: url(images/crest.png) no-repeat transparent 21px 0;
     min-height: 112px;
-    padding-left: 135px !important;
+    padding-left: 152px !important;
+    padding-top: 10px;
     }
 
 #header-left {
