--- a/sites/all/themes/scholar_theme_05/scholar-theme-05.css
+++ b/sites/all/themes/scholar_theme_05/scholar-theme-05.css
@@ -136,7 +136,7 @@ body.navbar #content-main {
     background:url(images/header-no-sidebar.jpg) no-repeat top center #6d2a01;
     }
 
-#header-main {
+#header #header-main {
     background: url(images/crest.png) no-repeat transparent 21px 0;
     min-height: 112px;
     padding-left: 152px !important;
@@ -174,7 +174,7 @@ body.header-main-right #header-wrapper, body.header-main #header-wrapper {
   }
 
 #header h1 {
-    font-size: 2.5em;
+    font-size: 2em;
     line-height: 1em;
     }
 
@@ -195,6 +195,11 @@ body.header-main-right #header-wrapper, body.header-main #header-wrapper {
 #header a, #header a:visited {
     text-decoration: none;
     }
+
+#scholar-shield {
+ padding-top: 10px;
+ text-align: center;
+ }
 
 #navbar {
   width: 900px;
