--- a/sites/all/themes/scholar_theme_06/scholar-theme-06.css
+++ b/sites/all/themes/scholar_theme_06/scholar-theme-06.css
@@ -8,6 +8,10 @@ body {
     font:.9em/165% "Lucida Grande","Lucida Sans Unicode",Arial,Verdana,sans-serif;
     }
 
+#wrapper {
+  padding-top: 10px;
+  }
+
 #container {
     width: 840px;
     margin: 0 auto;
