--- a/sites/all/themes/scholar_base/ctools.css
+++ b/sites/all/themes/scholar_base/ctools.css
@@ -13,7 +13,7 @@
 
 a.ctools-ajaxing,
 input.ctools-ajaxing,
-select.ctools-ajaxing, ul.admin li a.ctools-ajaxing {
+select.ctools-ajaxing, ul.admin li a.ctools-ajaxing, html.js a.views-throbbing, html.js span.views-throbbing {
   padding-right: 25px !important;
   background: url(images/throbber.gif) right center no-repeat;
 }
