--- a/sites/all/themes/scholar_theme_06/scholar-theme-06.css
+++ b/sites/all/themes/scholar_theme_06/scholar-theme-06.css
@@ -97,6 +97,7 @@ body.header-left-main #header-wrapper {
 
 #header-wrapper {
   padding-right: 132px;
+  height: 145px;
   }
 
 body.sidebar-right #content-wrapper {
@@ -116,7 +117,7 @@ body.no-sidebars #content-wrapper {
 #header {
     background: #44514F url(images/top.gif) no-repeat scroll center bottom;
     color: #F7F3EA;
-    padding-bottom: 28px;
+    padding-bottom: 40px;
     }
 
 
@@ -146,10 +147,6 @@ body.no-sidebars #content-wrapper {
 #logo img {
   width: 160px;
   }
-
-#navbar {
-    margin: 15px 0;
-    }
 
 #navbar ul.menu {
   text-align:center;
