--- a/sites/all/themes/scholar_theme_04/scholar-theme-04.css
+++ b/sites/all/themes/scholar_theme_04/scholar-theme-04.css
@@ -52,8 +52,8 @@ h2.title {
 /* LAYOUT */
 
 #sidebar-left, #header-left, #sidebar-right, #header-right {
-    width: 180px;
-    }
+  width: 180px;
+  }
 
 #sidebar-left {
   right: 190px;
@@ -141,6 +141,7 @@ body.sidebar-left #content-wrapper, body.header-left-main #header-wrapper {
 
 #content-main {
     padding: 0;
+    padding-top: 1px;
     }
 
 /* SIDEBARS */
