--- a/sites/all/themes/scholar_theme_04/scholar-theme-04-ie.css
+++ b/sites/all/themes/scholar_theme_04/scholar-theme-04-ie.css
@@ -1,4 +1,8 @@
-#sidebar-left, #header-left {
-  left: 0;
-	_left: 200px;
+body.two-sidebars #sidebar-left
+  left: 200px;
+	}
+
+
+body.header-left-main #header-left
+  left: 500px;
 	}
