--- a/sites/all/themes/cp_theme/cp-theme.css
+++ b/sites/all/themes/cp_theme/cp-theme.css
@@ -160,6 +160,7 @@ body.admin-menu #main-content {
 
 #cp-sidemenu li a:hover {
   background: #fff;
+  text-decoration: none;
   }
 
 #cp-sidemenu li.active a,
