--- a/sites/all/themes/scholar_theme_06/scholar-theme-06-ie.css
+++ b/sites/all/themes/scholar_theme_06/scholar-theme-06-ie.css
@@ -1,7 +1,11 @@
-#sidebar-left {
+body.two-sidebars #sidebar-left {
 	left: 210px;
 	}
 
-#header-left {
-  left: 125px;
+body.header-left-main-right #header-left {
+  left: -210px;
+  }
+
+body.header-left-main #header-left {
+  left: 0px;
   }
