--- a/sites/all/themes/scholar_theme_04/scholar-theme-04-ie.css
+++ b/sites/all/themes/scholar_theme_04/scholar-theme-04-ie.css
@@ -1,8 +1,11 @@
-body.two-sidebars #sidebar-left
-  left: 200px;
+body.two-sidebars #sidebar-left, body.header-left-main-right #header-left {
+  left: 190px;
+  }
+
+body.header-left-main #header-left {
+  left: -20px !important;
 	}
 
-
-body.header-left-main #header-left
-  left: 500px;
-	}
+#block-vsite_menus-0 ul.menu li a {
+  height: 1%;
+  }
