--- a/sites/all/themes/scholar_theme_06/scholar-theme-06.css
+++ b/sites/all/themes/scholar_theme_06/scholar-theme-06.css
@@ -115,7 +115,7 @@ body.no-sidebars #content-wrapper {
 /* HEADER ELEMENTS */
 
 #header {
-    background: #44514F url(images/top.gif) no-repeat scroll center bottom;
+    background: #44514F url(images/top.gif) no-repeat 0 100%;
     color: #F7F3EA;
     padding-bottom: 40px;
     }
@@ -188,8 +188,8 @@ body.two-sidebars #content {
 
 #content-wrapper-bottom {
   clear: both;
-  background: #44514F url(images/bot.gif) no-repeat bottom center;
-  padding-bottom: 40px;
+  background: #44514F url(images/bot.gif) no-repeat 0 100%;
+  height: 40px;
   }
 
 /* Footer*/
