change to welcome message

--- a/sites/all/themes/scholar_base/scholar-base.css
+++ b/sites/all/themes/scholar_base/scholar-base.css
@@ -495,7 +495,7 @@ div.error {
 /* Welcome message */
 
 #message_welcome_message {
-  background:#eef1c7;
+  background:#fff;
   border:1px solid #d1d5a6;
   color:#44471d;
   margin:0 0 10px;
