add new links on cp/content

--- a/sites/all/themes/cp_theme/cp-theme.css
+++ b/sites/all/themes/cp_theme/cp-theme.css
@@ -103,7 +103,7 @@ body.no-sidebars #cp-content, body.sidebar-right #cp-content {
   bottom: 0;
   }
 
-#cp-content .innerframe form, .view-display-id-default {
+#cp-content .innerframe form, .view-display-id-page_1 {
   margin: 30px;
   }
 
@@ -127,6 +127,30 @@ body.no-sidebars #cp-content, body.sidebar-right #cp-content {
 
 .item-list ul.context-links {
   padding: 30px 0 0 30px
+  }
+
+
+.view-display-id-page_1 .item-list ul.context-links, html.js div.ctools-dropdown {
+  padding: 0 0 30px 0;
+  }
+
+html.js div.ctools-dropdown div.ctools-dropdown-container {
+  border: 1px solid #ccc;
+  border-top: none;
+  padding: 5px 0 0 0;
+  background: #fff;
+  margin: 4px 0 0 9px;
+  }
+
+html.js div.ctools-dropdown div.ctools-dropdown-container ul li a {
+  padding: 3px 5px;
+  text-transform:capitalize;
+  width: auto;
+  }
+
+html.js div.ctools-dropdown div.ctools-dropdown-container ul li a:hover {
+  background: #ddd;
+  color: #000 !important;
   }
 
 .item-list ul.context-links li {
