--- a/sites/all/themes/scholar_base/scholar-base.css
+++ b/sites/all/themes/scholar_base/scholar-base.css
@@ -110,7 +110,7 @@ p.copy a.footer-login:hover {
   background: #fff;
   }
 
-.marker, .form-required, ul.admin li a, ul.admin li a:visited, a.context-button, html.js div.ctools-dropdown a {
+.marker, .form-required, ul.admin li a, ul.admin li a:visited, a.context-button, html.js div.ctools-dropdown a, .addcategory a {
   color: #cc0000 !important;
   }
 
@@ -409,7 +409,7 @@ a.delete {
   float:right;
   }
 
-a.context-button, html.js div.ctools-dropdown a.ctools-dropdown-text-link {
+a.context-button, html.js div.ctools-dropdown a.ctools-dropdown-text-link, .addcategory {
   font-style: normal !important;
   font-size: 12px !important;
   background: url(images/plus.gif) no-repeat 0 50% transparent !important;
