active trail fixes

--- a/sites/all/themes/scholar_theme_04/scholar-theme-04.css
+++ b/sites/all/themes/scholar_theme_04/scholar-theme-04.css
@@ -15,7 +15,7 @@ a, a:visited {
     padding: 2px;
     }
 
-a:hover, a.active {
+a:hover, a.active, .active-trail a {
     color:#fff;
     background:#adad84;
     }
