--- a/sites/all/themes/scholar_theme_05/scholar-theme-05.css
+++ b/sites/all/themes/scholar_theme_05/scholar-theme-05.css
@@ -43,7 +43,7 @@ a, a:visited {
   font-size: 1.2em;
   }
 
-a:hover, a.active {
+a:hover, a.active, .active-trail a {
   color:#000;
   text-decoration: underline;
   }
