--- a/sites/all/themes/scholar_theme_06/scholar-theme-06.css
+++ b/sites/all/themes/scholar_theme_06/scholar-theme-06.css
@@ -162,7 +162,7 @@ body.no-sidebars #content-wrapper {
     color:#D4D5D3;
     }
 
-#navbar a:hover, #navbar a.active {
+#navbar a:hover, #navbar a.active, #navbar .active-trail a {
     color: #F8EE7C;
     text-decoration: none;
     }
