--- a/sites/all/themes/scholar_theme_07/scholar-theme-07.css
+++ b/sites/all/themes/scholar_theme_07/scholar-theme-07.css
@@ -179,7 +179,7 @@ h2.title {
     font-weight: bold;
     }
 
-#navbar li a:hover, #navbar li a.active, #navbar li.active-trail a {
+#navbar li a:hover, #navbar li a.active, #navbar .active-trail a {
     color:#fff;
     background: #b8690c;
     }
