--- a/sites/all/modules/vsite/vsite_taxonomy/theme/vsite_taxonomy.css
+++ b/sites/all/modules/vsite/vsite_taxonomy/theme/vsite_taxonomy.css
@@ -18,7 +18,7 @@
   text-align: right;
   }
 
-#vsite-taxonomy-wrapper .item-list {
+#vsite-taxonomy-wrapper .item-list, .addcategory {
   float: right;
   width:280px;
   padding-bottom: 2em;
@@ -55,4 +55,6 @@
 
 .addcategory {
   clear: both;
+  text-align:right;
+  margin-right: 29px
   }
