--- a/sites/all/themes/scholar_base/scholar-base.css
+++ b/sites/all/themes/scholar_base/scholar-base.css
@@ -409,7 +409,7 @@ a.delete {
   float:right;
   }
 
-a.context-button, html.js div.ctools-dropdown a.ctools-dropdown-text-link, .addcategory {
+a.context-button, html.js div.ctools-dropdown a.ctools-dropdown-text-link, .addcategory a {
   font-style: normal !important;
   font-size: 12px !important;
   background: url(images/plus.gif) no-repeat 0 50% transparent !important;
