--- a/sites/all/themes/scholar_project/scholar-project.css
+++ b/sites/all/themes/scholar_project/scholar-project.css
@@ -89,12 +89,24 @@ div.form-item {
     color:#282828;
     }
 
+ul#top-front {
+  float:right;
+  }
+
 ul#top-front li {
   float: left;
   font-weight: normal;
   margin-left: 20px;
   line-height:42px;
   margin-top: 21px;
+  }
+
+ul#top-front li a, ul#top-front li a:visited {
+  color: #000;
+  }
+
+ul#top-front li a:hover {
+  text-decoration: underline;
   }
 
 li#get-form {
