fixed search field bug

--- a/sites/all/themes/cp_theme/forms.css
+++ b/sites/all/themes/cp_theme/forms.css
@@ -194,6 +194,10 @@ div.ctools-modal-content .modal_col .form-item label {
   width: auto;
   }
 
+.modal_col input.form-text {
+  width: 100%;
+  }
+
 /* USER CREATION */
 
 div.ctools-modal-content #ucreate-user-form .form-item label {
