--- a/sites/all/themes/scholar_base/forms.css
+++ b/sites/all/themes/scholar_base/forms.css
@@ -87,7 +87,7 @@ select option {
   width: 43px;
   }
 
-#vsite-widgets-search-form input#edit-submit {
+#vsite-widgets-search-form input#edit-submit, #vsite-widgets-search-form input.form-submit {
   float:right;
   background: transparent;
   font-size: 10px;
