adding contact to front

--- a/sites/all/themes/scholar_project/scholar-project.css
+++ b/sites/all/themes/scholar_project/scholar-project.css
@@ -205,7 +205,7 @@ li#get-form a {
 
 #block-views-iqss_project_sites-block_1, #footer {
   background: url(images/front-row3-bg.png) repeat-x #fefefe;
-  min-height: 603px;
+  min-height: 500px;
   position:relative;
   border: 1px solid #e1e1e1;
   border-top: none;
@@ -342,9 +342,13 @@ li#get-form a {
 
 #footer {
   background: #fefefe;
-  min-height: 0;
+  min-height: 100px;
   }
 
+#footer a, #footer a:visited {
+  color: #1A708F;
+  text-decoration: underline;
+  }
 
 /* Different Tables for admin use */
 
