--- a/sites/all/themes/scholar_base/biblio.css
+++ b/sites/all/themes/scholar_base/biblio.css
@@ -79,10 +79,9 @@ dl.bibliomultiselect .form-item {
 .biblio-separator-bar {
 	color: #000000;
 	font-weight: bold;
-	background-color: #e1e1e1;
-	border: 1px solid #ccc;
-	padding: 0.5em;
-	margin: 1em 0 1em 0;
+	background: transparent;
+	border-bottom: 1px solid #ccc;
+	margin-top: 1.5em;
 }
 
 .biblio-toolbar {
